# polars-daily-log

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_zh.md  adl  bootstrap.ps1  bootstrap.sh  collector.yaml.example  config.yaml  config.yaml.example  install.ps1  install.sh  pdl  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.secrets/: builtin.json.example
auto_daily_log/: __init__.py  __main__.py  app.py  builtin_llm.enc  builtin_llm.py  cli_query.py  config.py
auto_daily_log/collector/: git_collector.py
auto_daily_log/jira_client/: client.py
auto_daily_log/mcp_server/: server.py
auto_daily_log/models/: database.py  schemas.py
auto_daily_log/monitor/: classifier.py  ocr.py  phash.py  portal_screencast.py  screenshot.py  service.py
auto_daily_log/publishers/: __init__.py  jira.py  registry.py  webhook.py
auto_daily_log/scheduler/: jobs.py
auto_daily_log/search/: embedding.py  indexer.py  searcher.py
auto_daily_log/summarizer/: activity_summarizer.py  claude_engine.py  engine.py  openai_compat.py  prompt.py  summarizer.py  url_helper.py
auto_daily_log/updater/: __init__.py  __main__.py  backup.py  paths.py  runner.py  state.py  version_check.py
auto_daily_log/web/: app.py
auto_daily_log_collector/: DEVELOPMENT.md  config.py  enricher.py  runner.py
auto_daily_log_collector/monitor_internals/: classifier.py  phash.py
docs/: builtin-llm.md  release.md  test-coverage.md  usage-guide.md  windows-install-hints.md
scripts/: encrypt-builtin.sh  release.sh
shared/: schemas.py
tests/: test_activity_summarizer.py  test_api_chat.py  test_api_dashboard_extended.py  test_api_settings.py  test_api_timeline.py  test_api_updates.py  test_api_worklogs.py  test_audit_per_issue.py  test_classifier.py  test_collector_linux_adapter.py  test_collector_runtime_unified.py  test_config.py  test_database.py  test_database_async_backend.py  test_e2e_flow.py  test_e2e_full_lifecycle.py  test_e2e_updater.py  test_embedding.py  test_enricher.py  test_git_collector.py  test_install_real.py  test_install_sh.py  test_jira_client.py  test_llm_engine.py  test_monitor_platform.py  test_monitor_service.py  test_ocr.py  test_phase_a_schema.py  test_phase_b_backends.py  test_phase_c_ingest_api.py  test_phase_d_collector.py  test_phase_gkl_server.py  test_phase_p_protocol.py  test_phash.py  test_publisher_and_types.py  test_scheduler.py  test_scope_period.py  test_screenshot.py  test_searcher.py  test_summarizer.py  (+6 more)
(+40 files in other folders)
