[project]
name = "auto-daily-log"
version = "0.5.1"
description = "Automated Jira worklog tool with activity monitoring and LLM summarization"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "httpx[socks]>=0.25.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "imagehash>=4.3.0",
    "Pillow>=10.0",
    "sqlite-vec>=0.1.0",
    "python-multipart>=0.0.20",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Vision>=10.0"]
windows = ["winocr>=0.0.14"]
linux = ["pytesseract>=0.3.10", "Pillow>=10.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-httpx>=0.28.0"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_daily_log*", "auto_daily_log_collector*", "shared*"]
exclude = ["tests*", "docs*", "web*", "scripts*"]

# Ship pre-built frontend with the wheel so release users don't need Node.js.
# Built files live at web/frontend/dist/ and are copied into the wheel under
# the auto_daily_log package via a MANIFEST.in entry.
[tool.setuptools.package-data]
auto_daily_log = ["frontend_dist/**/*"]

[project.scripts]
auto-daily-log = "auto_daily_log.__main__:main"
auto-daily-log-collector = "auto_daily_log_collector.__main__:main"
polars-daily-log-mcp = "auto_daily_log.mcp_server:main"
